update: implemented categorical data encoding

--- a/data_analysis.ipynb
+++ b/data_analysis.ipynb
@@ -28,18 +28,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Dropping all rows with nan\n",
-      "(12327602, 16)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -73,62 +64,136 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "          customerId  productId  purchased isFemale        country  \\\n",
-       "0                  0    6055193      False     True  United States   \n",
-       "1                  0    6150738      False     True  United States   \n",
-       "2                  0    6974997      False     True  United States   \n",
-       "3                  0    7237821      False     True  United States   \n",
-       "4                  0    7376730      False     True  United States   \n",
-       "...              ...        ...        ...      ...            ...   \n",
-       "13481424      399475    7157178      False     True        Germany   \n",
-       "13481425      399475    7277739      False     True        Germany   \n",
-       "13481426      399475    7426863      False     True        Germany   \n",
-       "13481427      399477    6495819      False     True        Germany   \n",
-       "13481428      399478    5739201      False    False        Germany   \n",
-       "\n",
-       "          yearOfBirth isPremier  brand  price  productType  onSale  viewOnly  \\\n",
-       "0              1988.0     False     53  20.00         4036   False         1   \n",
-       "1              1988.0     False   3275  24.00         4036   False         0   \n",
-       "2              1988.0     False     53  20.00         4036   False         1   \n",
-       "3              1988.0     False     53  20.00         4036   False         0   \n",
-       "4              1988.0     False  13817  12.99         4036   False         1   \n",
-       "...               ...       ...    ...    ...          ...     ...       ...   \n",
-       "13481424       1964.0     False  15040  32.00         1465    True         1   \n",
-       "13481425       1964.0     False     53  55.00         1465   False         1   \n",
-       "13481426       1964.0     False  14809  50.00         1465   False         2   \n",
-       "13481427       1968.0     False     53  17.50         1562    True         1   \n",
-       "13481428       1964.0     False  12769  26.00         3717    True         1   \n",
-       "\n",
-       "          changeThumbnail  viewCatwalk  view360  sizeGuide  \n",
-       "0                       1            0        0          0  \n",
-       "1                       1            0        0          0  \n",
-       "2                       1            0        0          0  \n",
-       "3                       2            0        0          0  \n",
-       "4                       1            0        0          0  \n",
-       "...                   ...          ...      ...        ...  \n",
-       "13481424                1            0        0          0  \n",
-       "13481425                0            1        0          0  \n",
-       "13481426                0            1        0          0  \n",
-       "13481427                0            0        0          0  \n",
-       "13481428                1            0        0          0  \n",
-       "\n",
-       "[12327602 rows x 16 columns]"
-      ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>customerId</th>\n      <th>productId</th>\n      <th>purchased</th>\n      <th>isFemale</th>\n      <th>country</th>\n      <th>yearOfBirth</th>\n      <th>isPremier</th>\n      <th>brand</th>\n      <th>price</th>\n      <th>productType</th>\n      <th>onSale</th>\n      <th>viewOnly</th>\n      <th>changeThumbnail</th>\n      <th>viewCatwalk</th>\n      <th>view360</th>\n      <th>sizeGuide</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0</td>\n      <td>6055193</td>\n      <td>False</td>\n      <td>True</td>\n      <td>United States</td>\n      <td>1988.0</td>\n      <td>False</td>\n      <td>53</td>\n      <td>20.00</td>\n      <td>4036</td>\n      <td>False</td>\n      <td>1</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>0</td>\n      <td>6150738</td>\n      <td>False</td>\n      <td>True</td>\n      <td>United States</td>\n      <td>1988.0</td>\n      <td>False</td>\n      <td>3275</td>\n      <td>24.00</td>\n      <td>4036</td>\n      <td>False</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>0</td>\n      <td>6974997</td>\n      <td>False</td>\n      <td>True</td>\n      <td>United States</td>\n      <td>1988.0</td>\n      <td>False</td>\n      <td>53</td>\n      <td>20.00</td>\n      <td>4036</td>\n      <td>False</td>\n      <td>1</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>0</td>\n      <td>7237821</td>\n      <td>False</td>\n      <td>True</td>\n      <td>United States</td>\n      <td>1988.0</td>\n      <td>False</td>\n      <td>53</td>\n      <td>20.00</td>\n      <td>4036</td>\n      <td>False</td>\n      <td>0</td>\n      <td>2</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>0</td>\n      <td>7376730</td>\n      <td>False</td>\n      <td>True</td>\n      <td>United States</td>\n      <td>1988.0</td>\n      <td>False</td>\n      <td>13817</td>\n      <td>12.99</td>\n      <td>4036</td>\n      <td>False</td>\n      <td>1</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>13481424</th>\n      <td>399475</td>\n      <td>7157178</td>\n      <td>False</td>\n      <td>True</td>\n      <td>Germany</td>\n      <td>1964.0</td>\n      <td>False</td>\n      <td>15040</td>\n      <td>32.00</td>\n      <td>1465</td>\n      <td>True</td>\n      <td>1</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>13481425</th>\n      <td>399475</td>\n      <td>7277739</td>\n      <td>False</td>\n      <td>True</td>\n      <td>Germany</td>\n      <td>1964.0</td>\n      <td>False</td>\n      <td>53</td>\n      <td>55.00</td>\n      <td>1465</td>\n      <td>False</td>\n      <td>1</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>13481426</th>\n      <td>399475</td>\n      <td>7426863</td>\n      <td>False</td>\n      <td>True</td>\n      <td>Germany</td>\n      <td>1964.0</td>\n      <td>False</td>\n      <td>14809</td>\n      <td>50.00</td>\n      <td>1465</td>\n      <td>False</td>\n      <td>2</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>13481427</th>\n      <td>399477</td>\n      <td>6495819</td>\n      <td>False</td>\n      <td>True</td>\n      <td>Germany</td>\n      <td>1968.0</td>\n      <td>False</td>\n      <td>53</td>\n      <td>17.50</td>\n      <td>1562</td>\n      <td>True</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>13481428</th>\n      <td>399478</td>\n      <td>5739201</td>\n      <td>False</td>\n      <td>False</td>\n      <td>Germany</td>\n      <td>1964.0</td>\n      <td>False</td>\n      <td>12769</td>\n      <td>26.00</td>\n      <td>3717</td>\n      <td>True</td>\n      <td>1</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n  </tbody>\n</table>\n<p>12327602 rows × 16 columns</p>\n</div>"
-     },
-     "metadata": {},
-     "execution_count": 2
-    }
-   ],
+   "outputs": [],
    "source": [
     "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from argparse import Namespace\n",
+    "import pandas as pd\n",
+    "from sklearn.compose import make_column_transformer\n",
+    "from main import *\n",
+    "\n",
+    "args = Namespace(data_frac=0.1, max_depth=3, model='BoostedTree', nestimators=100, nfolds=10, seed=7, verbose=0)\n",
+    "\n",
+    "print(args)\n",
+    "\n",
+    "np.random.seed(args.seed)\n",
+    "\n",
+    "print(\"Loading data ...\")\n",
+    "features, target, customerId = load_training_data(args)\n",
+    "\n",
+    "## preprocessing features\n",
+    "# fill missing values\n",
+    "print(\"Filling missing values\")\n",
+    "features = fill_missing_values(features)\n",
+    "\n",
+    "# encode categorical variables\n",
+    "column_trans = make_column_transformer(\n",
+    "    (OneHotEncoder(), [\"country\", \"brand\", \"productType\", \"isFemale\", \"isPremier\", \"onSale\"]),\n",
+    "    remainder=\"passthrough\",\n",
+    ")\n",
+    "print(\"Fitting column transformer on categorical variables\")\n",
+    "column_trans.fit(features)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Starting cross-validation\")\n",
+    "kfold = GroupKFold(n_splits=args.nfolds)\n",
+    "\n",
+    "aucs = []\n",
+    "for train_index, val_index in kfold.split(X=features, groups=customerId):\n",
+    "    break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_features = column_trans.transform(features.iloc[train_index])\n",
+    "train_features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_targets = target.iloc[train_index]\n",
+    "train_targets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import GradientBoostingClassifier\n",
+    "clf = GradientBoostingClassifier(n_estimators=args.nestimators, random_state=args.seed, max_depth=args.max_depth, verbose=args.verbose)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf.fit(train_features, train_targets)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "val_features = column_trans.transform(features.iloc[val_index])\n",
+    "val_targets = target.iloc[val_index]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "val_pred = clf.predict_proba(val_features)[:,1]\n",
+    "auc = roc_auc_score(val_targets, val_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "auc"
    ]
   },
   {
